--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "bad-words": "^3.0.4",
     "concurrently": "^6.0.0",
     "copyfiles": "2.4.1",
     "cross-env": "^7.0.2",
